--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Webpage</title>
+  <title>ResidentEvil</title>
 </head>
 <body>
 
-  <h1>My First Heading</h1>
-  <p>My first paragraph.</p>
+  <h1>Dylan website</h1>
+  <p>................</p>
   <img src="horse.gif" alt="My Cool GIF" width="500" height="auto">
 
 </body>
