--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>Dylan website</h1>
   <p>................</p>
-  <img src="horse.gif" alt="My Cool GIF" width="500" height="auto">
+  <img src="RE.png" alt="Resident Evil" width="500" height="auto">
 
 </body>
 </html>
