--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <h1>Dylan website</h1>
   <p>................</p>
+  <p>Dylan</p>
   <img src="RE.png" alt="Resident Evil" width="500" height="auto">
 
 </body>
